# predrnn-pytorch

./: .gitignore  create_comparison_grid.py  pyproject.toml  run.py
batch/: python_27044308.out  python_27044321.err  python_27044321.out  python_27044431.out  python_27044507.out  python_27044536.out
batch/kth/: python_27044308.err  python_27044431.err  python_27044507.err  python_27044536.err  test.sh  train.sh
batch/temp/: train.sh
core/: trainer.py
core/data_provider/: datasets_factory.py  kth_action.py  temperature.py
kth_script/: predrnn_v2_kth_test.sh  predrnn_v2_kth_train.sh
temp_script/: predrnn_v2_temperature_train.sh
