[project]
name = "predrnn-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <3.9"
dependencies = [
    "matplotlib",
    "numpy>=1.19.0,<1.20.0",
    "opencv-python",
    "pillow",
    "scikit-learn",
    "scipy",
    "tensorflow==2.2.0",
    "torch==1.9.0",
    "scikit-image",
    "lpips",
]
